<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.test.crudlabappfinal.EditBookActivity"
    tools:showIn="@layout/activity_edit_book">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/editText_book_id"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/edit_book_id"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText_book_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_book_id"
            android:layout_marginBottom="10dp"
            android:hint="@string/edit_book_title"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText_book_author"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_book_title"
            android:layout_marginBottom="10dp"
            android:hint="@string/edit_book_author"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText_book_image"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_book_author"
            android:layout_marginBottom="10dp"
            android:hint="@string/edit_book_image"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText_book_release_date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_book_image"
            android:layout_marginBottom="10dp"
            android:hint="@string/edit_book_releaseDate"
            android:singleLine="true" />

    </RelativeLayout>
</RelativeLayout>
